--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
   font-family: IBM Plex Sans Thai Looped;
   --primary-color: #f1f1f1;
   --secondary-color: #2d2d2d;
+  --tablet-size: 768px;
 }
 
 *,
@@ -17,8 +18,9 @@ h2 {
   font-family: IBM Plex Mono;
 }
 
-header,
+html,
 body {
+  max-width: 100vw;
   height: 100dvh;
   padding: 0;
   margin: 0;
