--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -8,7 +8,7 @@
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 925px) {
   .main-content-padding {
     padding: 50px 10px;
   }
@@ -18,4 +18,10 @@
   .main-content-padding {
     padding: 20px 10px;
   }
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  gap: 100px;
 }
