feat: componente card com stack

--- a/src/index.css
+++ b/src/index.css
@@ -39,3 +39,22 @@ body {
   font-weight: bold;
   letter-spacing: 2px;
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #94717100;
+  margin: 0 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #8888887a;
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #5555557a;
+}
